--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Where is Stefan?</h1>
+<p>Last sighting: November 23, 2021</p>
 </body>
 </html>
